--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,7 @@
     padding: 40px 0;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow:0 0 20px 20px rgba(0,0,0,0.06);
+    /*box-shadow:0 0 20px 20px rgba(0,0,0,0.06);*/
 }
 .call-for-action>h3{
     font-family: 'Poppins', sans-serif;
